2007-06-06  Andy Wingo  <wingo@pobox.com>

	Patch by: Sebastien Merle  <sebastien@fluendo.com>

	* flumotion/admin/gtk/parts.py: 
	* flumotion/admin/gtk/client.py: 
	* flumotion/launch/parse.py: 
	* flumotion/manager/manager.py: 
	* flumotion/manager/admin.py: 
	* flumotion/common/config.py: 
	* flumotion/test/test_config.py: 
	* flumotion/test/test_manager_manager.py:
	The components can now have a human-readable guaranteed label,
	which is set in the config dict. If not specified, no label will
	be set in the dict. Fixes #658.

2007-06-05  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/feedcomponent010.py
	  (FeedComponent.parseEaterConfig):
	Moved checking of full feed id to parser, so redundant.
	* flumotion/test/test_component.py (TestParser.testOneSource,
	  TestParser.testOneSourceWithout, TestParser.testTwoSources,
	  TestParser.testTwoBoth):
	Fix tests now that the component will not append :default
	for you.

2007-06-05  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/common/config.py (BaseConfigParser.parseFeedId):
	Make sure feedIds stored in eater dict are proper feedIds.
	* flumotion/manager/manager.py (Vishnu.parseFeedId,
	  Vishnu.fixOldEaterConfig, Vishnu.verifyExistingComponentState,
	  Vishnu.makeNewComponentState):
	Move common code out to new function. Translate feedIds to proper
	feedIds.

2007-06-05  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/test/test_component.py (PipelineTest.__init__,
	  PipelineTest.config):
	* flumotion/test/test_component_httpstreamer.py
	  (TestOldProperties.setUp):
	* flumotion/test/test_manager_depgraph.py
	  (testDepGraph._createComponent):
	Add source key back so that tests more accurately reflect reality
	because parser adds this key.

2007-06-05  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/converters/overlay/overlay.py
	  (Overlay.get_pipeline_string):
	Fix to use eater dict.